tests/rosetta/transpiler/erl/dijkstras-algorithm.error
exit status 127
escript: exception error: no case clause matching #{"b" => 7,"c" => 9,"f" => 14}
  in function  main:'-dijkstra/1-Fun_5_loop/8-4-'/8 (/workspace/mochi/tests/rosetta/transpiler/erl/dijkstras-algorithm.erl, line 133)
  in call from main:'-dijkstra/1-Fun_6_loop/4-2-'/4 (/workspace/mochi/tests/rosetta/transpiler/erl/dijkstras-algorithm.erl, line 148)
  in call from main:dijkstra/1 (/workspace/mochi/tests/rosetta/transpiler/erl/dijkstras-algorithm.erl, line 153)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/dijkstras-algorithm.erl, line 185)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/dijkstras-algorithm.erl, line 198)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
